--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,30 +2,29 @@ name: Go
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
-
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.16
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.16
 
-    - name: Test
-      run: go test -race ./...
-      
+      - name: Test
+        run: go test -race ./...
+
   golangci:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      
+
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
@@ -36,16 +35,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-          
+
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
           go-version: 1.16
-          
+
       - uses: goreleaser/goreleaser-action@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
           version: latest
           args: release --rm-dist
+          workdir: ./cmd/forwarder
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
