--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [main]
     tags:
-      - "v*"
+      - "v*.*.*"
   pull_request:
     branches: [main]
 
@@ -44,7 +44,7 @@ jobs:
           go-version: 1.16
 
       - uses: goreleaser/goreleaser-action@v2
-        if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/v')
         with:
           version: latest
           args: release --rm-dist
