--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,6 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      # Todo, fix dependencies to be fetched from github artifacts.
+      - name: Dependencies
+        run: sudo dpkg -i external/*.deb
 
       - name: Set up Go
         uses: actions/setup-go@v2
