--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Configure git for private modules
-        run: git config --global url."https://${{ secrets.GITHUB_TOKEN }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
+        run: git config --global url."https://${{ secrets.PAT_USERNAME}}:${{ secrets.PAT_TOKEN }}@github.com".insteadOf "https://github.com"
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
@@ -29,8 +29,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Configure git for private modules
-        run: git config --global url."https://${{ secrets.GITHUB_TOKEN }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
-
+        run: git config --global url."https://${{ secrets.PAT_USERNAME}}:${{ secrets.PAT_TOKEN }}@github.com".insteadOf "https://github.com"
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
@@ -42,8 +41,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Configure git for private modules
-        run: git config --global url."https://${{ secrets.GITHUB_TOKEN }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
-
+        run: git config --global url."https://${{ secrets.PAT_USERNAME}}:${{ secrets.PAT_TOKEN }}@github.com".insteadOf "https://github.com"
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
