--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,9 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.16
-
+      - run: echo "${GITHUB_TOKEN}" | docker login ghcr.io --username $GITHUB_ACTOR --password-stdin
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
       - uses: goreleaser/goreleaser-action@v2
         if: startsWith(github.ref, 'refs/tags/v')
         with:
