--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -12,3 +12,20 @@ builds:
       - linux
     goarch:
       - amd64
+dockers:
+  - dockerfile: Dockerfile.goreleaser
+    binaries:
+      - fluent-bit-cloud-forwarder
+    goos: linux
+    goarch: amd64
+    build_flag_templates:
+      - --label=org.opencontainers.image.title={{ .ProjectName }}
+      - --label=org.opencontainers.image.description={{ .ProjectName }}
+      - --label=org.opencontainers.image.url=https://github.com/calyptia/fluent-bit-cloud-forwarder
+      - --label=org.opencontainers.image.source=https://github.com/calyptia/fluent-bit-cloud-forwarder
+      - --label=org.opencontainers.image.version={{ .Version }}
+      - --label=org.opencontainers.image.created={{ time "2006-01-02T15:04:05Z07:00" }}
+      - --label=org.opencontainers.image.revision={{ .FullCommit }}
+    image_templates:
+      - 'ghcr.io/calyptia/fluent-bit-cloud-forwarder:latest'
+      - 'ghcr.io/calyptia/fluent-bit-cloud-forwarder:{{ .Tag }}'
